crates/cairn-mcp/tests/snapshots/graph_tools_manifest__manifest_all_conditions_met.snap
---
source: crates/cairn-mcp/tests/graph_tools_manifest.rs
assertion_line: 546
expression: names
---
[
  "assemble_hot",
  "capture_trace",
  "forget",
  "graph.get_entity",
  "graph.get_neighbors",
  "graph.query",
  "graph.surprising_connections",
  "graph.timeline",
  "ingest",
  "lint",
  "retrieve",
  "search",
  "summarize"
]
