crates/cairn-mcp/tests/snapshots/graph_tools_manifest__manifest_graph_edges_false.snap
---
source: crates/cairn-mcp/tests/graph_tools_manifest.rs
expression: names
---
[
  "assemble_hot",
  "capture_trace",
  "forget",
  "ingest",
  "lint",
  "retrieve",
  "search",
  "summarize"
]
