crates/cairn-mcp/tests/snapshots/graph_tools_manifest__manifest_resolver_err.snap
---
source: crates/cairn-mcp/tests/graph_tools_manifest.rs
assertion_line: 513
expression: names
---
[
  "assemble_hot",
  "capture_trace",
  "forget",
  "ingest",
  "lint",
  "retrieve",
  "search",
  "summarize"
]
